# slameckacz

./: .gitignore  CNAME  default.nix  e404.html  flake.nix  index.html  keybase.txt  package.yaml  readme.md  s5upload.yml  shell.nix  site.cabal  site.hs  slameckacz.cabal  stack.yaml  style.css
_site/: e404.html  index.html  style.css
_site/assets/2021-05-08-bayesian-case-for-lasso-and-ridge/: plots.py
_site/fi/bc_thesis/: index.html
assets/2021-03-17-cpp-metaprogramming-exercises-1/: typelevel_set1.cpp
assets/2021-04-02-lovasz-local-lemma/: dependent_formula.dot  independent_formula.dot
assets/2021-12-05-cpp-metaprogramming-exercises-2/: typelevel_set2.cpp
css/: main.scss
fi/bc_thesis/: index.html
fi/msc_thesis/: index.html
misc/matrix/: index.html  script.js
nix/: clean.nix  default.nix
posts/: 2020-06-08-encoding-issues-with-nix-hakyll.rst  2020-06-09-probability-of-22.rst  2020-07-04-element-creation-event-in-halogen.rst  2020-10-19-screenshots-with-haskell-or-not.rst  2021-01-24-seam-carving.rst  2021-03-17-cpp-metaprogramming-exercises-1.rst  2021-04-02-lovasz-local-lemma.rst  2021-05-08-bayesian-case-for-lasso-and-ridge.rst  2021-12-05-cpp-metaprogramming-exercises-2.rst  2025-10-05-wordle.rst
posts/2020-06-09-probability-of-22/: index.html
posts/2021-01-24-seam-carving/: index.html
posts/2021-04-02-lovasz-local-lemma/: index.html
posts/2021-05-08-bayesian-case-for-lasso-and-ridge/: index.html
posts/2021-12-05-cpp-metaprogramming-exercises-2/: index.html
templates/: default.html  header.html  post.html
(+2 files in other folders)
