name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >=4.14 && <5
                  , hakyll >= 4.14
                  , pandoc
                  , filepath
  ghc-options:      -threaded
  default-language: Haskell2010
